# testWorldCup

Projet CPP/: CMakeLists.txt  readme
Projet CPP/apps/: main.cpp
Projet CPP/assets/: player.xcf  test.xcf
Projet CPP/include/: Game.hpp  TextureManager.hpp
Projet CPP/src/: Game.cpp  TextureManager.cpp
